--- a/inst/doc/usageExamples.Rnw
+++ b/inst/doc/usageExamples.Rnw
@@ -71,6 +71,40 @@ Factors can be used to generate custom group orderings:
 @
 \end{center}
 
+The axes can also be switched with a categorical y-axis:
+<<yaxis, echo=TRUE, eval=FALSE>>=
+  ggplot(mapping=aes(dat,labs)) + geom_quasirandom(aes(color=labs))
+@
+\begin{center}
+<<showYaxis, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
+<<yaxis>>
+@
+\end{center}
+
+And dodging can be used to compare within groups:
+<<dodge, echo=TRUE, eval=FALSE>>=
+  labs2<-factor(rep(1:2,each=n))
+  ggplot(mapping=aes(labs,dat,color=labs2)) + geom_quasirandom(dodge.width=.8)
+@
+\begin{center}
+<<showDodge, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
+<<dodge>>
+@
+\end{center}
+Or on the y-axis:
+<<dodgey, echo=TRUE, eval=FALSE>>=
+  labs2<-factor(rep(1:2,each=n))
+  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_quasirandom(dodge.width=.8)
+@
+\begin{center}
+<<showDodgey, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
+<<dodge>>
+@
+\end{center}
+
+
+
+
 \section{Options}
 There are several ways to plot grouped one-dimensional data combining points and density estimation including:
 \begin{description}
@@ -126,7 +160,7 @@ The first four options are included within \code{geom_quasirandom} using the \co
 \end{center}
 
 
-\code{quasirandom} calls \code{vipor::offsetX} which calls \code{stats::density} to compute kernel density estimates. The tightness of the fit can be adjusted with the \code{adjust} option and the width of the offset with \code{width}. \code{nbins} to adjust the number of bins used in the kernel density is also provided but this can usually be left at its default when using quasirandom offsets but is useful for non-quasirandom methods:
+\code{quasirandom} calls \code{vipor::offsetX} which calls \code{stats::density} to compute kernel density estimates. The tightness of the fit can be adjusted with the \code{bandwidth} option and the width of the offset with \code{width}. \code{nbins} to adjust the number of bins used in the kernel density is also provided but this can usually be left at its default when using quasirandom offsets but is useful for non-quasirandom methods:
 
 <<distAdjust, echo=TRUE, eval=FALSE, tidy=TRUE>>=
   library(gridExtra)
@@ -173,7 +207,6 @@ The \code{frowney} or \code{smiley} methods are sensitive to the number of bins 
 @
 \end{center}
 
-
 The \code{varwidth} argument scales the width of a group by the square root of the number of observations in that group (as in the function \code{boxplot}):
 <<varwidth, echo=TRUE, eval=FALSE>>=
   dat <- list(
@@ -211,7 +244,7 @@ An example using the \code{beaver1} and \code{beaver2} data from the \pkg{datase
 @
 \end{center}
 
-An example using the \code{integrations} data from the \pkg{vipor} package:
+An example using the \code{integrations} data from the \pkg{vipor} package and the argument \code{dodge.width}:
 <<vpGene, echo=TRUE, eval=FALSE>>=
   library(vipor)
   ints<-integrations[integrations$nearestGene>0,]
