--- a/vignettes/usageExamples.Rnw
+++ b/vignettes/usageExamples.Rnw
@@ -69,9 +69,9 @@ Factors can be used to generate custom group orderings:
 @
 \end{center}
 
-The axes can also be switched with a categorical y-axis:
+The axes can also be switched with a categorical y-axis using the argument \code{groupOnX=FALSE}:
 <<yaxis, echo=TRUE, eval=FALSE>>=
-  ggplot(mapping=aes(dat,labs)) + geom_quasirandom(aes(color=labs))
+  ggplot(mapping=aes(dat,labs)) + geom_quasirandom(aes(color=labs),groupOnX=FALSE)
 @
 \begin{center}
 <<showYaxis, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
@@ -92,7 +92,7 @@ And dodging can be used to compare within groups:
 Or on the y-axis:
 <<dodgey, echo=TRUE, eval=FALSE>>=
   labs2<-factor(rep(1:2,each=n))
-  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_quasirandom(dodge.width=.8)
+  ggplot(mapping=aes(dat,labs,color=labs2)) + geom_quasirandom(dodge.width=.8,groupOnX=FALSE)
 @
 \begin{center}
 <<showDodgey, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
@@ -112,7 +112,7 @@ And with \code{geom_beeswarm}:
 \end{center}
 <<dodgeYBee, echo=TRUE, eval=FALSE>>=
   ggplot(mapping=aes(dat,labs,color=labs2)) +
-    geom_beeswarm(dodge.width=.8,cex=2)
+    geom_beeswarm(dodge.width=.8,cex=2,groupOnX=FALSE)
 @
 \begin{center}
 <<showDodgeYBee, fig=TRUE, height=3.5, width=5, echo=FALSE>>=
