--- a/README.Rmd
+++ b/README.Rmd
@@ -95,14 +95,13 @@ Using `geom_beeswarm`:
 ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm()
 ggplot(mpg,aes(class, hwy)) + geom_beeswarm()
 # With categorical y-axis
-ggplot(mpg,aes(hwy, class)) + geom_beeswarm(cex=1.2,groupOnX=FALSE)
-
-# ggplot doesn't pass any information about the actual device size of the points
-# to the underlying layout code, so it's important to manually adjust the `cex` 
-# parameter for best results
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.6,groupOnX=FALSE)
 # Also watch out for points escaping from the plot with geom_beeswarm
-ggplot(mpg,aes(class, hwy)) + geom_beeswarm(cex=1.1)
-ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(cex=1.2,priority='density')
+ggplot(mpg,aes(hwy, class)) + geom_beeswarm(size=.6,groupOnX=FALSE) + expand_limits(y=c(1,8))
+
+ggplot(mpg,aes(class, hwy)) + geom_beeswarm(size=1.1)
+
+ggplot(iris,aes(Species, Sepal.Length)) + geom_beeswarm(size=1.2,priority='density')
 
 # With automatic dodging
 ggplot(sub_mpg, aes(class, displ, color=factor(cyl))) + geom_beeswarm(dodge.width=0.5)
